# MitoFlex

./: .gitignore  MitoFlex.py  MitoX.py  README.md  arguments.py  configurations.py  environment.yml  example.config.py  helper.py  ncbi.py  requirements.txt  runner.py  seqpro  test.py
annotation/: annotation.py  annotation_tookit.py
annotation/mitfi/: mitfi_config.txt
annotation/tRNAs/models/: Metazoa_A.cm  Metazoa_C.cm  Metazoa_D.cm  Metazoa_E.cm  Metazoa_G.cm  Metazoa_H.cm  Metazoa_K.cm  Metazoa_L2.cm  Metazoa_M.cm  Metazoa_N.cm  Metazoa_P.cm  Metazoa_S2.cm  Metazoa_T.cm  Metazoa_V.cm
annotation/wisecfg/: wise.per
assemble/: SOAPdenovo-127mer  assemble.py  assemble_pipeline.py  assemble_wrapper.py  fastfilter  scaffold_wrapper.py
assemble/SOAPdenovo2/: SOAPdenovo-fusion
assemble/fastfilter_src/: Cargo.toml
bim/: bim.py  piped_wrapper.py
bim/seqpro/: Cargo.toml
bim/seqpro/src/: helper.rs  interleave_fastq.rs  main.rs  partial_fq.rs  sam2fq.rs  sam2mappedfq.rs
config/: clades.py
filter/: filter.py  filter_pe  filter_pe.cpp  filter_se  filter_se.cpp  filter_se.out  filter_v2
filter/filter_bin/: Cargo.toml
filter/filter_multi/: Cargo.toml
filter/filter_multi/src/: app.rs  helper.rs  main.rs  pe.rs  se.rs
filter/filter_pe/: filter_pe  filter_pe.cpp  main  main.cpp
filter/filter_pe_src/: filter_pe.cpp
filter/filter_se/: filter_se  filter_se.cpp  filter_se.sln  main  main.cpp
filter/filter_se_src/: filter_se  filter_se.cpp
findmitoscaf/: avgdep_bin  filter_taxa.py  findmitoscaf.py
findmitoscaf/avgdep/: Cargo.toml
findmitoscaf/brutepacking/: Cargo.toml
findmitoscaf/brutepacking/src/: lib.rs
findmitoscaf/fastmathcal/: Cargo.toml
findmitoscaf/fastmathcal/src/: lib.rs
findmitoscaf/mlc/: Cargo.toml
misc/: check_circular.py  dp_circle_check  dp_circle_check.cpp
misc/fastmathcal/: Cargo.toml
misc/fastmathcal/src/: lib.rs
profile/: codes.json
profile/CDS_HMM/: lengths.json  required_cds.json
profile/rRNA_CM/: 12s.cm  12smito-1.0.cm  16s.cm  16smito-1.0.cm  README.txt
profile/tRNA_CM/: Metazoa_F.cm  Metazoa_I.cm  Metazoa_L1.cm  Metazoa_Q.cm  Metazoa_R.cm  Metazoa_S1.cm  Metazoa_W.cm  Metazoa_Y.cm
utility/: __init__.py  helper.py  logger.py  parser.py  profiler.py  seq.py  wuss.py
utility/bio/: circos.py  infernal.py  seq.py  wuss.py
visualize/: circos.default.py  circos_config.py  visualize.py
(+12 files in other folders)
