[package]
name = "seqpro"
version = "0.1.0"
authors = ["Prunoideae <a455167189@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"
flate2 = "1.0"
bio = "0.31.0"
itertools = "0.9.0"
bcmp = "0.4.1"
