[package]
name = "filter_multi"
version = "0.1.0"
authors = ["Prunoideae <a455167189@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flate2 = "1.0"
itertools = "0.8"
clap = "2.33"
futures = "0.1"
futures-cpupool = "0.1.8"
