[package]
name = "fastmathcal"
version = "0.1.0"
authors = ["Prunoideae <a455167189@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastmathcal"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.0"
features = ["extension-module"]
