[package]
name = "fastmathcal"
version = "0.1.0"
authors = ["Prunoideae <a455167189@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastmathcal"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[dependencies]
bio = "0.32.0"
ndarray = "0.13.1"
csv = "1.1"